# FastAPI_CRUD_APP

./: main.py  models.py  pyproject.toml
